<resources>
    <string name="app_name">CCS_Test_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment valute list</string>
    <string name="date_from">Select date from:</string>
    <string name="date_before">Select date before:</string>
    <string name="date">Date</string>
    <string name="nominal">Nominal</string>
    <string name="value">Value</string>
    <string name="input_curs_value">Input curs value</string>
    <string name="check_value">Check value</string>
    <string name="toast_incorrect_date">\'Select date from\' must be less than
        \'Select date before!\' Choose another date!</string>
    <string name="button_update_list">Update list</string>
    <string name="button_select_currency">Select Currency</string>
    <string name="text_view_filter_type">Filter type</string>
    <string name="app_name_currency_rates">Currency Rates</string>
    <string name="text_view_date_from">01/01/2021</string>
    <string name="text_view_date_before">01/01/2022</string>
    <string name="text_view_currency_type_label">Currency</string>
    <array name="currency">
        <item>USD</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>GBP</item>
        <item>AMD</item>
        <item>BYN</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>HUF</item>
        <item>HKD</item>
    </array>
    <array name="filter">
        <item>1..10</item>
        <item>10..1</item>
    </array>

</resources>