<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.ccs_test_2.features.mainScreen.presentation.MainFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCurrencyList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuteItemLabel" />

    <TextView
        android:id="@+id/textViewDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_date_from"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewDateBefore"
        app:layout_constraintStart_toStartOf="@+id/textViewDateBefore"
        app:layout_constraintTop_toTopOf="@+id/textViewDateFromLabel"
        tools:text="01/03/2022" />

    <TextView
        android:id="@+id/textViewDateBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_view_date_before"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDateBeforeLabel"
        app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
        app:layout_constraintStart_toEndOf="@+id/textViewDateBeforeLabel"
        tools:text="01/03/2022" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/button_update_list"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDateBefore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDateFrom"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewDateFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_from"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textViewDateBeforeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_before"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateFromLabel" />

    <LinearLayout
        android:id="@+id/valuteItemLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelectCurrency">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCurrencyNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_view_currency_type_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewNominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nominal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/black" />


    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerSelectCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/currency"
        app:layout_constraintStart_toEndOf="@+id/textViewSelectCurrencyLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateBefore" />

    <Spinner
        android:id="@+id/spinnerFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerSelectCurrency" />

    <TextView
        android:id="@+id/textViewSelectCurrencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_currency"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerSelectCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerSelectCurrency" />

    <TextView
        android:id="@+id/textViewSelectFilterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/text_view_filter_type"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerFilter"
        app:layout_constraintEnd_toStartOf="@+id/spinnerFilter"
        app:layout_constraintTop_toTopOf="@+id/spinnerFilter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_currency_rates"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewDateFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewCurrencyList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuteItemLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>